# Fluffy-doc

./: .gitignore  FluffyDoc.spec  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-flatpak.yml  build-windows.yml  ci.yml
assets/: vytvor_ikony.py
data/sablony/predavaci-protokol-mobilni-telefon/: dokument.docx  sablona.json
data/sablony/predavaci-protokol-pc-notebook/: dokument.odt  sablona.json
data/sablony/predavaci-protokol-sim-karta/: dokument.docx  sablona.json
examples/: vytvor_ukazkove_sablony.py
packaging/flatpak/: cz.prosecurity.FluffyDoc.yaml
packaging/linux/: cz.prosecurity.FluffyDoc.desktop  cz.prosecurity.FluffyDoc.metainfo.xml
protokoly/: __init__.py  app.py
protokoly/core/: __init__.py  docx_engine.py  generator.py  odt_engine.py  placeholder.py
protokoly/models/: __init__.py  field.py  storage.py  template.py
protokoly/ui/: fill_dialog.py  main_window.py  template_editor.py
tests/: test_core.py
